Fixed header z-index to stay visible on scroll

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -39,6 +39,7 @@ html {
 header {
   position: fixed;
   width: 100%;
+  z-index: 10;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
 }
